# Marreq

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  .gitmodules  .stylelintrc.json  CACHE_PERFORMANCE_FIX.md  CHANGELOG  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_ERRORS.txt  COMMIT_MESSAGE_GENERATORS.txt  COMMIT_MESSAGE_IMPORTERS.txt  COMMIT_MESSAGE_REPOSITORY.txt  COMMIT_MESSAGE_ROUTES.txt  COMMIT_MESSAGE_VALIDATION.txt  CSS_STYLE_GUIDE.md  Cargo.toml  DATABASE_SETUP.md  DATABASE_SETUP_README.md  Dockerfile  INSTALL.md  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_ERRORS.md  PR_DESCRIPTION_IMPORTERS.md  PR_DESCRIPTION_REPOSITORY.md  PR_DESCRIPTION_ROUTES.md  PR_DESCRIPTION_VALIDATION.md  README.md  README_Docker.md  Rocket.docker.toml  Rocket.toml  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_RECOMMENDATIONS.md  clear_database.sh  cookies.txt  coverage.xml  diesel.toml  docker-compose.ci.yml  (+22 more)
backend/: Cargo.toml  Rocket.toml
backend/migrations/2026-03-09-140000_backfill_status_tag_colors/: up.sql
backend/migrations/2026-03-16-000001_project_slugs/: down.sql
backend/migrations/2026-03-20-000002_namespace_scoped_project_slugs/: down.sql  up.sql
backend/migrations/2026-03-28-120000_project_reviewers_verification_audit/: down.sql  up.sql
backend/scripts/: README.md  check_requirements_compliance.py  db_backup.sh  db_migrate.sh  db_reset.sh  db_seed.sh  db_setup.sh  init_complete.sql  lazy_setup.sh  run_checks.sh  run_ci.sh  run_tests.sh
backend/src/: app.rs  cors.rs  db_types.rs  lib.rs  main.rs  permissions.rs  schema.rs
backend/src/api/: activity.rs  auth.rs  auth_public.rs  baselines.rs  comments.rs  dashboard.rs  guards.rs  matrix.rs  members.rs  mod.rs  prelude.rs  projects.rs  projects_session.rs  requirements.rs  traceability.rs  users.rs  users_admin.rs  verification_methods.rs  verification_status.rs  verifications.rs
backend/src/auth/: errors.rs  guards.rs  login.rs
backend/src/deployment/: mod.rs
backend/src/diff/: mod.rs
backend/src/fairings/: cache_control.rs  cloud_admin_bootstrap.rs  csrf.rs  mod.rs  security_headers.rs
backend/src/generators/: mod.rs  tests.rs
backend/src/helper_functions/: decorators.rs  filters.rs
backend/src/importers/: excel.rs
backend/src/models/: entities.rs  forms.rs  tests.rs
backend/src/repository/: cache_middleware.rs  diesel_repo.rs  diesel_repo_mock.rs  mod.rs  tests.rs
backend/src/routes/: api_info.rs  catchers.rs  helpers.rs
backend/src/services/: base_service.rs  baseline_service.rs  comment_service.rs  decorated_requirement_service.rs  decorated_test_service.rs  email_sender.rs  group_service.rs  log_service.rs  matrix_service.rs  mod.rs  project_service.rs  registration_service.rs  requirement_analytics_service.rs  requirement_diff_service.rs  requirement_service.rs  user_service.rs  verification_service.rs
backend/src/validation/: mod.rs  tests.rs
backend/templates/: change_password.html.hbs  edit_profile.html.hbs  entity_logs.html.hbs  footer.html.hbs  group.html.hbs  index.html.hbs  layout_requirements_app.html.hbs  login.html.hbs  new_user.html.hbs  project_detail.html.hbs  user.html.hbs  user_by_id.html.hbs  user_profile.html.hbs
backend/templates/admin/: cache_health.html.hbs  cache_stats.html.hbs  change_user_password.html.hbs  users.html.hbs
backend/templates/applicability/: applicability.html.hbs  edit_applicability.html.hbs  new_applicability.html.hbs
backend/templates/baselines/: baseline_item.html.hbs  baselines.html.hbs  new_baseline.html.hbs
backend/templates/categories/: category.html.hbs  edit_category.html.hbs
backend/templates/custom_fields/: new_custom_field.html.hbs
backend/templates/matrix/: _filter_controls.html.hbs  _legend.html.hbs  _page_header.html.hbs  _pagination_controls.html.hbs  _shortcuts_panel.html.hbs  _table.html.hbs
backend/tests/: admin_integration_test.rs  api_applicability_integration_test.rs  api_authentication_test.rs  api_cache_integration_test.rs  api_categories_integration_test.rs  api_constraint_violation_test.rs  api_error_consistency_test.rs  api_matrix_endpoint_test.rs  api_matrix_integration_test.rs  api_mcp_phase2_test.rs  api_project_scoping_test.rs  api_requirements_integration_test.rs  api_semantic_search_test.rs  api_status_integration_test.rs  api_tests_integration_test.rs  api_users_integration_test.rs  api_validation_test.rs  api_workflow_integration_test.rs  cors_test.rs  frontend_requirements_test.rs  project_management_integration_test.rs  template_smoke.rs
excel_parser/: Cargo.toml  README.md
excel_parser/src/: api_client.rs  main.rs  parser.rs
marreq-cloud/: Cargo.toml  README.md
marreq-cloud/src/: deployment.rs  lib.rs  main.rs  routes.rs
marreq-cloud/tests/: auth_public_integration_test.rs  cloud_admin_bootstrap_test.rs  cloud_mode_shared_test.rs
marreq-core/: Cargo.toml  README.md
marreq-core/scripts/: README.md  check_requirements_compliance.py  db_backup.sh  db_reset.sh  db_seed.sh  db_setup.sh  lazy_setup.sh  reindex_project.sh  run_ci.sh  seed_space_project_bulk_requirements.sql  seed_space_project_bulk_tests_and_hierarchy.sql
marreq-core/src/: app.rs  authorization.rs  config.rs  lib.rs  namespaces.rs  schema.rs  status_enums.rs
marreq-core/tests/: api_applicability_integration_test.rs  api_authentication_test.rs  api_cache_integration_test.rs  api_categories_integration_test.rs  api_constraint_violation_test.rs  api_error_consistency_test.rs  api_matrix_endpoint_test.rs  api_matrix_integration_test.rs  api_mcp_phase2_test.rs  api_project_scoping_test.rs  api_requirements_integration_test.rs  api_semantic_search_test.rs  api_status_integration_test.rs  api_tests_integration_test.rs  api_users_integration_test.rs  api_validation_test.rs  api_workflow_integration_test.rs  cors_test.rs  csrf_integration_test.rs  requirement_list_bulk_query_regression.rs  requirement_version_link_cycle_trigger_test.rs
marreq-server/: Cargo.toml  README.md
marreq-server/src/: deployment.rs  main.rs  routes.rs
marreq-server/tests/: admin_users_integration_test.rs  server_mode_integration_test.rs
(+1055 files in other folders)
