# Virtual workspace: three-crate split — marreq-core (lib), marreq-server (bin), marreq-cloud (bin).
[workspace]
resolver = "2"
members = ["marreq-core", "marreq-server", "marreq-cloud"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = [
    "Màrius Montón <marius.monton@gmail.com>",
    "Ramon Vallés <vallespuigramon@gmail.com>",
]

# Centralised dependency versions. Member crates reference these via
# `dep = { workspace = true }`, optionally adding extra `features` locally.
# Feature sets declared here are the union of what the member crates need.
[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
calamine = "0.33"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4"
diesel = { version = "2.3.6", features = ["postgres", "chrono", "r2d2", "serde_json"] }
dotenvy = "0.15.7"
lazy_static = "1.5"
lettre = { version = "0.11.20", features = ["builder", "smtp-transport", "tokio1-native-tls"] }
pgvector = { version = "0.4.1", features = ["diesel"] }
printpdf = "0.9.1"
quick-xml = { version = "0.39", features = ["serialize"] }
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
similar = "2.7"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
urlencoding = "2.1"
xlsxwriter = "0.6.1"
