[package]
name = "excel_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4.43", features = ["serde"] }
url = "2.0" 