# Marreq shared core library. Consumed by marreq-server and marreq-cloud.

[package]
name = "marreq-core"
version = "0.1.0"
edition = "2021"
description = "Marreq shared core library: domain, persistence, Rocket primitives."
license = "AGPL-3.0-or-later"
authors = [
    "Màrius Montón <marius.monton@gmail.com>",
    "Ramon Vallés <vallespuigramon@gmail.com>",
]

[lib]

[features]
default = []
# Enable test helpers (swaps in DieselRepoMock for integration tests)
test-helpers = []

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
calamine = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
diesel = { workspace = true }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
lettre = { workspace = true }
pgvector = { workspace = true }
printpdf = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rocket = { workspace = true }
rocket_sync_db_pools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
xlsxwriter = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
